# drone

./: Cargo.toml
assets/: uploads_files_4453673_FPV+DRONE.gltf
controller/: Cargo.toml
controller/src/: lib.rs
simulator/: Cargo.toml
simulator/assets/: uploads_files_4453673_FPV+DRONE.blend
simulator/src/: main.rs
src/: main.rs
