[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.*", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.27.*", features = [
    "simd-stable",
    "debug-render-3d",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
